page wrapper overflow issue

--- a/scss/components/_sidebar.scss
+++ b/scss/components/_sidebar.scss
@@ -274,6 +274,7 @@
         position: relative;
         z-index: 1000;
         transition: transform 0.3s ease;
+        overflow: hidden !important;
         
     
         &.shift-left {
